--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: minimal-streamlit-example
+name: Reports
 channels:
 - defaults
 - conda-forge
@@ -14,19 +14,14 @@ dependencies:
 - matplotlib-base=3.5.1
 - matplotlib-inline=0.1.2
 - pandas=1.3.4
-- patsy=0.5.2
-- pillow=9.0.1
 - pip=21.2.4
 - plotly=5.6.0
 - scipy=1.7.3
 - statsmodels=0.13.2
-- keras==2.8.0
 - numpy
 - pickle5==0.0.12
+-mysql
 - pip:
   - streamlit
-  - scikit-learn==1.0.2
-  - sklearn==0.0
-  - tensorflow==2.8.0
   - setuptools-git==1.2
   - cmdstanpy==0.9.5
