--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
-pandas 
-streamlit 
-plotly
-pyodbc
+python==3.7
+conda
+pandas==1.3.4
+pip==21.2.4
+plotly==5.6.0
+statsmodels==0.13.2
 numpy
+mysql
+streamlit
+setuptools-git==1.2
+cmdstanpy==0.9.5
